# ZenSVI

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_SUMMARY.md  codecov.yml  dependency_analysis.txt  plan.md  pyproject.toml  requirements.txt  skills-lock.json
.agents/skills/decision-mapping/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/review/: SKILL.md
.github/workflows/: ci.yml  lint.yml  pr-checks.yml  test.yml  test_mly_metadata.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  references.bib  references.md  requirements.txt
docs/_static/: custom.css
docs/autoapi/: index.rst
docs/autoapi/attractor/: index.rst
docs/autoapi/blocks/: index.rst
docs/autoapi/dinov2/: index.rst
docs/autoapi/dinov2/configs/: index.rst
docs/autoapi/dinov2/data/: index.rst
docs/autoapi/dinov2/data/adapters/: index.rst
docs/autoapi/dinov2/data/augmentations/: index.rst
docs/autoapi/dinov2/data/collate/: index.rst
docs/autoapi/dinov2/data/datasets/: index.rst
docs/autoapi/dinov2/data/loaders/: index.rst
docs/autoapi/dinov2/data/masking/: index.rst
docs/autoapi/dinov2/data/samplers/: index.rst
docs/autoapi/dinov2/data/transforms/: index.rst
docs/autoapi/dinov2/distributed/: index.rst
docs/autoapi/dinov2/eval/: index.rst
docs/autoapi/dinov2/eval/knn/: index.rst
docs/autoapi/dinov2/eval/linear/: index.rst
docs/autoapi/dinov2/eval/log_regression/: index.rst
docs/autoapi/dinov2/eval/metrics/: index.rst
docs/autoapi/dinov2/eval/setup/: index.rst
docs/autoapi/dinov2/eval/utils/: index.rst
docs/autoapi/dinov2/fsdp/: index.rst
docs/autoapi/dinov2/layers/: index.rst
docs/autoapi/dinov2/layers/attention/: index.rst
docs/autoapi/dinov2/logging/: index.rst
docs/autoapi/dinov2/loss/: index.rst
docs/autoapi/dinov2/models/: index.rst
docs/autoapi/dinov2/run/: index.rst
docs/autoapi/dinov2/train/: index.rst
docs/autoapi/dinov2/utils/: index.rst
docs/autoapi/dist_layers/: index.rst
docs/autoapi/dpt/: index.rst
docs/autoapi/hubconf/: index.rst
docs/autoapi/knn/: index.rst
docs/autoapi/linear/: index.rst
docs/autoapi/localbins_layers/: index.rst
docs/autoapi/log_regression/: index.rst
docs/autoapi/patch_transformer/: index.rst
docs/autoapi/setup/: index.rst
docs/autoapi/train/: index.rst
docs/autoapi/transform/: index.rst
docs/autoapi/utils/: index.rst
docs/autoapi/vision_transformer/: index.rst
docs/autoapi/zensvi/: index.rst
docs/autoapi/zensvi/cv/: index.rst
docs/autoapi/zensvi/download/: index.rst
docs/autoapi/zensvi/metadata/: index.rst
docs/autoapi/zensvi/transform/: index.rst
docs/autoapi/zensvi/utils/: index.rst
docs/autoapi/zensvi/visualization/: index.rst
docs/examples/: demo_Downloading.ipynb  demo_Embeddings.ipynb  demo_Perception.ipynb  demo_Point_Cloud.ipynb  demo_metadata_analysis.ipynb  demo_transform_images.ipynb  demo_visualization.ipynb  index.md  test.ipynb
docs/examples/input_data/SVI_to_point_cloud/: point_cloud_test_df.csv
docs/examples/output_data/point_clouds/: VSsVjWlr4orKerabFRy-dQ.pcd  VSsVjWlr4orKerabFRy-dQ.ply  Y2y7An1aRCeA5Y4nW7ITrg.pcd  Y2y7An1aRCeA5Y4nW7ITrg.ply
src/streetscope/: __init__.py
src/streetscope/cv/segmentation/: segmentation.py
src/streetscope/download/: streetview_downloader.py
src/streetscope/download/utils/: geoprocess.py  get_pids.py  helpers.py  imtool.py  transform_image.py
src/streetscope/download_async/: __init__.py  streetview_downloader_async.py
src/streetscope/download_async/utils/: get_pids_async.py  imtool_async.py
src/streetscope/transform/: transform_image.py
src/zensvi/: __init__.py
src/zensvi/cv/: __init__.py
src/zensvi/cv/classification/: __init__.py  base.py  glare.py  lighting.py  panorama.py  perception.py  places365.py  platform.py  quality.py  reflection.py  view_direction.py  weather.py
src/zensvi/cv/depth_estimation/: __init__.py  depth_estimation.py
src/zensvi/cv/embeddings/: __init__.py  embeddings.py  testing.ipynb
src/zensvi/cv/low_level/: __init__.py  low_level.py
src/zensvi/cv/object_detection/: __init__.py  object_detection.py
src/zensvi/cv/segmentation/: __init__.py  segmentation.py
src/zensvi/download/: __init__.py  ams.py  base.py  gs.py  gsv.py  kv.py  mly.py  streetview_downloader.py
src/zensvi/download/kartaview/: download_functions.py
src/zensvi/download/mapillary/: __init__.py  interface.py
src/zensvi/download/utils/: geoprocess.py  get_pids.py  helpers.py  imtool.py
src/zensvi/download_async/: __init__.py  streetview_downloader.py
src/zensvi/download_async/utils/: get_pids.py  proxies.csv
src/zensvi/metadata/: __init__.py  base_metadata.py  kv_metadata.py  mly_metadata.py
src/zensvi/transform/: __init__.py  image_to_pointcloud.py  image_to_pointcloud_vggt.py  transform_image.py
src/zensvi/utils/: log.py
src/zensvi/visualization/: __init__.py  font_property.py  hist.py  image.py  kde.py  map.py
tests/: conftest.py  test_ams.py  test_ams_pagination.py  test_base.py  test_base_downloader.py  test_depth_estimation.py  test_download_utils.py  test_embeddings.py  test_font_property.py  test_glare.py  test_gs.py  test_gsv.py  test_gsv_config.py  test_image_transformation.py  test_kv.py  test_kv_download_functions.py  test_kv_metadata.py  test_lighting.py  test_log.py  test_low_level_features.py  test_mly.py  test_mly_metadata.py  test_object_detection.py  test_panorama.py  test_perception.py  test_places365.py  test_platform.py  test_point_cloud.py  test_quality.py  test_reflection.py  test_segmentation.py  test_streetscope.py  test_vggt_batch_fix.py  test_view_direction.py  test_visualization.py  test_weather.py  test_zensvi.py
tests/data/input/: line_ams.geojson  point_ams.geojson  point_cloud_test_df.csv  polygon_ams.geojson  test_ams.csv  test_multipolygon_sg.geojson  test_polygon_sg.geojson  test_sg.csv
tests/data/input/metadata/: gsv_pids.csv  kv_pids.csv  mly_pids.csv
tests/data/input/visualization/: gsv_pids.csv
(+278 files in other folders)
