[tool.poetry]
name = "zensvi"
version = "1.4.0"
description = "This package handles downloading, cleaning, analyzing street view imagery in a one-stop and zen manner."
authors = ["koito19960406"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Pillow = ">=10.0.0"
geopandas = ">=0.10.0"
numpy = "*"
opencv-python = ">=4.5.3"
osmnx = "^1.1.1"
pandas = "*"
requests = "^2.26.0"
setuptools = ">=64.0.3"
Shapely = ">=2.0.0"
tqdm = "^4.61.1"
transformers = "^4.10.2"
scipy = "^1.7"
networkx = "^3.1"
attrs = "^21.2.0"
click = "^8.0.1"
click-plugins = "^1.1.1"
cligj = "^0.7.2"
docutils = ">=0.16"
mapbox-vector-tile = "^2.0.0"
mercantile = "^1.2.1"
munch = "^2.5.0"
psutil = "^5.8.0"
requests-toolbelt = ">=0.9.1"
vt2geojson = "^0.2.1"
Pygments = "^2.9.0"
haversine = "^2.3.1"
python-dotenv = "^0.19.0"
turfpy = "^0.0.7"
geojson = "^2.5.0"
streetlevel = "^0"
seaborn = "^0.13.2"
aiohttp = "^3.9.5"
h3 = "^3.7.7"
contextily = "^1.6.0"
astral = "^3.2"
timezonefinder = "^6.5.0"
lightning = "^2.2.3"
torch = ">=2.3"
pyarrow = "^16.0.0"
polars-lts-cpu = "^0.20.23"
torchvision = "*"
faiss-cpu = "^1.9.0"
img2vec-pytorch = "^1.0.1"
open3d = "^0.19.0"
scikit-learn = "^1.5.2"
addict = "^2.4.0"
tenacity = "^9.0.0"
groundingdino-py = "^0.4.0"
huggingface_hub = "^0.30.0"
gradio-imageslider = "^0.0.20"
gradio = "4.29.0"

[tool.poetry.group.dev.dependencies]
bleach = "^3.3.0"
certifi = "^2021.5.30"
chardet = "^4.0.0"
coverage = "*"
future = "^0.18.2"
hypothesis = "^6.14.0"
idna = "^2.10"
iniconfig = "^1.1.1"
pkginfo = "^1.7.0"
pluggy = "^1.0.0"
py = "^1.10.0"
pyparsing = "^2.4.7"
six = "^1.16.0"
sortedcontainers = "^2.4.0"
twine = "^1.13.0"
urllib3 = "^2.0.0"
webencodings = "^0.5.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "*"
furo = "*"
recommonmark = "*"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503"

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D415", "D107", "D205", "D105"]
match-dir = "(?!.*DepthAnythingV2).*"

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "zensvi"
from = "src"
