[tool.poetry]
name = "zensvi"
version = "1.4.9"
description = "This package handles downloading, cleaning, analyzing street view imagery in a one-stop and zen manner."
authors = ["koito19960406"]
license = "MIT"
readme = "README.md"
exclude = ["src/zensvi/transform/vggt"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Pillow = ">=10.0.0"
geopandas = ">=1.0.0,<2.0"
numpy = ">=1.26.0,<3.0"
opencv-python = ">=4.5.3"
osmnx = ">=2.0.0"
pandas = ">=2.0.0"
requests = ">=2.32.0,<3.0"
Shapely = ">=2.0.0,<3.0"
tqdm = ">=4.61.1"
# Cap below 4.53.0: newer releases have a broken import (NameError: name 'nn') in
# transformers/integrations/accelerate.py (huggingface/transformers#43784). Lift once fixed upstream.
transformers = ">=4.40.0,<4.53.0"
networkx = ">=3.1"
mapbox-vector-tile = ">=2.0.0"
mercantile = ">=1.2.1"
vt2geojson = ">=0.2.1"
haversine = ">=2.3.1"
turfpy = ">=0.0.7"
geojson = ">=2.5.0"
streetlevel = ">=0.1.0"
seaborn = ">=0.13.0"
h3 = ">=3.7.7"
contextily = ">=1.6.0"
astral = ">=3.2"
timezonefinder = ">=6.5.0"
lightning = ">=2.2.3"
torch = ">=2.4,<2.10"
pyarrow = ">=16.0.0"
polars-lts-cpu = ">=0.20.0"
torchvision = ">=0.15.0"
faiss-cpu = ">=1.7.0"
img2vec-pytorch = ">=1.0.1"
open3d = ">=0.18.0"
tenacity = ">=8.0.0"
groundingdino-py = ">=0.4.0"
huggingface_hub = ">=0.23.0"
importlib-resources = {version = ">=5.0", python = "<3.9"}

[tool.poetry.group.dev.dependencies]
coverage = "*"
hypothesis = ">=6.14.0"
black = ">=22.3.0"
isort = ">=5.10.1"
flake8 = ">=5.0.0"
pydocstyle = ">=6.1.1"
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
myst-nb = {version = ">=1.0.0", python = ">=3.9"}
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"
sphinxcontrib-bibtex = "*"
furo = "*"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503, E501"

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D415", "D107", "D205", "D105"]
match-dir = "(?!.*DepthAnythingV2).*"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "network: marks tests that require network access",
    "gpu: marks tests that require GPU",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "zensvi"
from = "src"
